--- a/itis3135/intro_form.html
+++ b/itis3135/intro_form.html
@@ -25,6 +25,9 @@
         p{
             font-family:Georgia;
         }
+        form{
+            padding-left:100px;
+        }
         form label{
             display:block;
             margin-top: 15px;
@@ -43,6 +46,9 @@
             border-radius: 6px;
             margin-bottom: 15px;
             border: 2px solid rgb(41, 33, 95);
+        }
+        img{
+            max-width:200px;
         }
     </style>
   </head>
@@ -87,7 +93,7 @@
         <label>Academic Background: <input id="academicBg" type="text" value="Junior at UNCC majoring in Computer Science with a concentration in Software Engineering." placeholder="Enter acdemic background"></label>
 
         <label>Background in this subject: <input id="subjectBg" type="text" value="n/a" placeholder="Enter background in this subject"></label>
-        
+
         <label>Primary Computer: <input id="primaryComp" type="text" value="Windows Thinkpad" placeholder="Enter primary computer"></label>
 
         <label>Graduation Date: <input id="graduation" type="text" value="2027" placeholder="Enter graduation date"></label>
