--- a/itis3135/intro_form.html
+++ b/itis3135/intro_form.html
@@ -7,7 +7,7 @@
     <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
     <style>
         body{
-            background-color:rgb(240, 197, 195);
+            background-color:rgb(173, 247, 190);
             color:rgb(41, 33, 95);
         }
         a{
@@ -54,7 +54,7 @@
   </head>
   <body>
     <header>
-      <!-- <div data-include="components/header.html"></div> -->
+      <div data-include="components/header.html"></div>
     </header>
     <main>
       <h2 class="mobile-heading">Introduction Form</h2>
@@ -138,7 +138,7 @@
       </form>
     </main>
     <footer>
-      <!-- <div data-include="components/footer.html"></div> -->
+      <div data-include="components/footer.html"></div>
     </footer>
     <script src="scripts/HTMLInclude.min.js"></script>
     <script src="scripts/introduction.js"></script>
