--- a/itis3135/intro_form.html
+++ b/itis3135/intro_form.html
@@ -5,6 +5,7 @@
     <title>Muhilan Muruganandam|Magnificent Meercat|ITIS3135|Introduction Form</title>
     <link rel="stylesheet" href="styles/default.css">
     <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.11.1/styles/default.min.css">
     <style>
         body{
             background-color:rgb(173, 247, 190);
@@ -131,16 +132,26 @@
         <label>GitHub.io: <input id="gitHubIo" type="url" value="https://muhilmu-ctrl.github.io/" placeholder="Github.io"></label>
         
         <label>ITIS3135: <input id="itis" type="url" value="https://webpages.charlotte.edu/mmuruga2/itis3135/" placeholder="ITIS3135"></label>
+
+        <section id="jsonOutput" style="display: none;">
+          <pre><code id="jsonData" class="json"></code></pre>
+        </section>
         
         <button type="submit">Submit</button>
         <button type="reset">Reset</button>
         <button id="clearBtn" type="button">Clear</button>
+        <button id="generateJson" type="button">Generate JSON</button>
       </form>
+      <br>
+      <br>
     </main>
     <footer>
       <div data-include="components/footer.html"></div>
     </footer>
     <script src="scripts/HTMLInclude.min.js"></script>
     <script src="scripts/introduction.js"></script>
+    <script src="scripts/generate_json.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.11.1/highlight.min.js"></script>
+    <script>hljs.highlightAll();</script>
   </body>
 </html>
