heading change for generate_json

--- a/itis3135/intro_form.html
+++ b/itis3135/intro_form.html
@@ -58,7 +58,7 @@
       <div data-include="components/header.html"></div>
     </header>
     <main>
-      <h2 class="mobile-heading">Introduction Form</h2>
+      <h2 id="pageHeading" class="mobile-heading">Introduction Form</h2>
       <br>
       <h3>Please submit the form below.</h3>
       <form id="introForm">
