hiding display for h3 when json is generated: submit form below

--- a/itis3135/intro_form.html
+++ b/itis3135/intro_form.html
@@ -60,7 +60,7 @@
     <main>
       <h2 id="pageHeading" class="mobile-heading">Introduction Form</h2>
       <br>
-      <h3>Please submit the form below.</h3>
+      <h3 id="instructionHeading">Please submit the form below.</h3>
       <form id="introForm">
         <label>First Name: <input id="firstName" type="text" value="Muhilan" placeholder="first name" required></label>
 
