--- a/itis3135/intro_form.html
+++ b/itis3135/intro_form.html
@@ -141,8 +141,9 @@
         <button id="generateJson" type="button">Generate JSON</button>
       </form>
       <section id="jsonOutput" style="display: none;">
-          <pre><code id="jsonData" class="json"></code></pre>
-        </section>
+        <h3 style="display: none;">JSON File</h3>
+        <pre><code id="jsonData" class="json"></code></pre>
+      </section>
       <br>
       <br>
     </main>
