--- a/itis3135/intro_form.html
+++ b/itis3135/intro_form.html
@@ -139,10 +139,15 @@
         <button type="reset">Reset</button>
         <button id="clearBtn" type="button">Clear</button>
         <button id="generateJson" type="button">Generate JSON</button>
+        <button id="generateHtml" type="button">Generate HTML</button>
       </form>
       <section id="jsonOutput" style="display: none;">
         <h3 style="display: none;">JSON File</h3>
         <pre><code id="jsonData" class="json"></code></pre>
+      </section>
+      <section id="htmlOutput" style="display: none;">
+        <h3 style="display: none;">HTML File</h3>
+        <pre><code id="htmlData" class="html"></code></pre>
       </section>
       <br>
       <br>
