created and linked generate_html.js

--- a/itis3135/intro_form.html
+++ b/itis3135/intro_form.html
@@ -158,6 +158,7 @@
     <script src="scripts/HTMLInclude.min.js"></script>
     <script src="scripts/introduction.js"></script>
     <script src="scripts/generate_json.js"></script>
+    <script src="scripts/generate_html.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.11.1/highlight.min.js"></script>
     <script>hljs.highlightAll();</script>
   </body>
