updated project_overview and added wireframe img

--- a/itis3135/project_overview.html
+++ b/itis3135/project_overview.html
@@ -23,7 +23,7 @@
         }
         p{
             font-family:Georgia;
-        } 
+        }
     </style>
   </head>
   <body>
@@ -63,27 +63,60 @@
 
         <p>Client Information:</p>
         <ul>
-            <li>Client Name:
-                <ul><li></li></ul>
-            </li>
-            <li>Client's Email Address:
-                <ul><li></li></ul>
-            </li>
-            <li>Client's Phone Number:
-                <ul><li></li></ul>
-            </li>
+            <li>Client Name: Porunai LLC</li>
+            <li>Client's Email Address: [private]</li>
+            <li>Client's Phone Number: [private]</li>
         </ul>
-        
+
         <p>Wireframe:</p>
         <figure>
-            <img src="">
+            <img src="images/client_project_wireframe.png" alt="image of client project wireframe" style="width: 300px;">
             <figcaption></figcaption>
         </figure>
         <p>Sitemap:</p>
         <figure>
-            <img src="images/client_project_sitemap.png">
+            <img src="images/client_project_sitemap.png" alt="image of client project sitemap" style="width: 300px">
             <figcaption></figcaption>
         </figure>
+
+        <p>Page Design:</p>
+        <ul>
+            <li>Home
+                <ul><li>Purpose: Introduce the site and encourage visitors to explore the site and/or contact them.</li></ul>
+                <ul><li>Audience/Users: Potential clients, people interested in hiring a photographer.</li></ul>
+                <ul><li>Content: Small introduction, welcome statement.</li></ul>
+                <ul><li>Will users be asked to enter data? No.</li></ul>
+                <ul><li>Contains buttons or hyperlinks? Possibly.</li></ul>
+            </li>
+            <li>About
+                <ul><li>Purpose: Provide visitors with some background on them as a photographer.</li></ul>
+                <ul><li>Audience/Users: People interested in hiring a photographer.</li></ul>
+                <ul><li>Content: A professional bio.</li></ul>
+                <ul><li>Will users be asked to enter data? No.</li></ul>
+                <ul><li>Contains buttons or hyperlinks? A button with text "visit our contact page" that takes the user to the contact page.</li></ul>
+            </li>
+            <li>Portfolio
+                <ul><li>Purpose: To showcase their work.</li></ul>
+                <ul><li>Audience/Users: Potential clients.</li></ul>
+                <ul><li>Content: Gallery of photos organized by event, captions/descriptions of photos.</li></ul>
+                <ul><li>Will users be asked to enter data? No.</li></ul>
+                <ul><li>Contains buttons or hyperlinks? No.</li></ul>
+            </li>
+            <li>Services
+                <ul><li>Purpose: Provide visitors with information on the types of events covered, pricing of events.</li></ul>
+                <ul><li>Audience/Users: Potential clients who want to know more about the services provided.</li></ul>
+                <ul><li>Content: List of services, prices for events.</li></ul>
+                <ul><li>Will users be asked to enter data? No.</li></ul>
+                <ul><li>Contains buttons or hyperlinks? Possibly a button with text "visit our contact page" that takes the user to the contact page.</li></ul>
+            </li>
+            <li>Contact
+                <ul><li>Purpose: Provide a way for potential clients to contact them.</li></ul>
+                <ul><li>Audience/Users: Potential clients who want to book them for an event or ask them about their services.</li></ul>
+                <ul><li>Content: Phone number, email</li></ul>
+                <ul><li>Will users be asked to enter data? No.</li></ul>
+                <ul><li>Contains buttons or hyperlinks? </li></ul>
+            </li>
+        </ul>
     </main>
     <footer>
       <div data-include="components/footer.html"></div>
