--- a/itis3135/project_overview.html
+++ b/itis3135/project_overview.html
@@ -67,18 +67,16 @@
             <li>Client's Email Address: [private]</li>
             <li>Client's Phone Number: [private]</li>
         </ul>
-
-        <p>Wireframe:</p>
+        <br>
         <figure>
             <img src="images/client_project_wireframe.png" alt="image of client project wireframe" style="width: 300px;">
-            <figcaption></figcaption>
+            <figcaption>Wireframe</figcaption>
         </figure>
-        <p>Sitemap:</p>
         <figure>
             <img src="images/client_project_sitemap.png" alt="image of client project sitemap" style="width: 300px">
-            <figcaption></figcaption>
+            <figcaption>Sitemap</figcaption>
         </figure>
-
+        <br>
         <p>Page Design:</p>
         <ul>
             <li>Home
