--- a/itis3135/project_overview.html
+++ b/itis3135/project_overview.html
@@ -69,12 +69,12 @@
         </ul>
         <br>
         <figure>
-            <img src="images/client_project_wireframe.png" alt="image of client project wireframe" style="width: 300px;">
+            <img src="images/client_project_wireframe.png" alt="image of client project wireframe">
             <figcaption>Wireframe</figcaption>
         </figure>
         <br>
         <figure>
-            <img src="images/client_project_sitemap.png" alt="image of client project sitemap" style="width: 300px">
+            <img src="images/client_project_sitemap.png" alt="image of client project sitemap">
             <figcaption>Sitemap</figcaption>
         </figure>
         <br>
@@ -112,8 +112,8 @@
                 <ul><li>Purpose: Provide a way for potential clients to contact them.</li></ul>
                 <ul><li>Audience/Users: Potential clients who want to book them for an event or ask them about their services.</li></ul>
                 <ul><li>Content: Phone number, email</li></ul>
-                <ul><li>Will users be asked to enter data? No.</li></ul>
-                <ul><li>Contains buttons or hyperlinks? </li></ul>
+                <ul><li>Will users be asked to enter data? Yes, to fill out a form.</li></ul>
+                <ul><li>Contains buttons or hyperlinks? No.</li></ul>
             </li>
         </ul>
     </main>
