--- a/itis3135/project_overview.html
+++ b/itis3135/project_overview.html
@@ -36,7 +36,7 @@
         <p>Application Purpose: Website to promote advertisement for a photography business/company.</p>
         <p>Intended Users: People who want to hire a photographer for events.</p>
         <br>
-        <p>Content Overview:</p>
+        <h3>Content Overview:</h3>
         <ul>
             <li>Home page
                 <ul><li>To introduce the site and catch the user’s attention.</li></ul>
@@ -60,8 +60,8 @@
                 <ul><li>Name, email, phone number.</li></ul>
             </li>
         </ul>
-
-        <p>Client Information:</p>
+        <br>
+        <h3>Client Information:</h3>
         <ul>
             <li>Client Name: Porunai LLC</li>
             <li>Client's Email Address: [private]</li>
@@ -78,7 +78,7 @@
             <figcaption>Sitemap</figcaption>
         </figure>
         <br>
-        <p>Page Design:</p>
+        <h3>Page Design:</h3>
         <ul>
             <li>Home
                 <ul><li>Purpose: Introduce the site and encourage visitors to explore the site and/or contact them.</li></ul>
@@ -114,6 +114,18 @@
                 <ul><li>Content: Phone number, email</li></ul>
                 <ul><li>Will users be asked to enter data? Yes, to fill out a form.</li></ul>
                 <ul><li>Contains buttons or hyperlinks? No.</li></ul>
+            </li>
+        </ul>
+        <h3>Dynamic Functionality:</h3>
+        <ul>
+            <li>Lightbox gallery in the Portfolio page.
+                <ul><li>When the user clicks on an image, it will open up in a full-screen modal with possible navigation arrows to move through the gallery.</li></ul>
+                <ul><li>Why: so users can view high-quality images in full screen while being able to navigate through the gallery.</li></ul>
+                <ul><li>Example: <a href="https://500px.com/" target="_blank">500px.com</a></li></ul>
+            </li>
+            <li>Navigation bar that remains at the top of the site, no matter which page the user is on. 
+                <ul><li>Why: so users can have easy access to navigation options at all times.</li></ul>
+                <ul><li>Example: <a href="https://www.apple.com/" target="_blank">apple.com</a></li></ul>
             </li>
         </ul>
     </main>
