updated client project index and about

--- a/itis3135/client_project/about.html
+++ b/itis3135/client_project/about.html
@@ -20,7 +20,7 @@
   </head>
   <body>
     <header>
-        <h1>About Us</h1>
+        <h1>Porunai</h1>
         <hr>
         <nav>
             <a href="./index.html">Home</a>
@@ -28,9 +28,17 @@
         </nav>
         <hr>
     </header>
-    
-    <p>text</p>
+    <main>
+        <h2>About Us</h2>
+        <h3>about statement</h3>
+        <p>main bio regarding company</p>
+    </main>
     <br>
+    <br>
+    <br>
+    <footer>
+        <p>phone num & copywright</p>
+    </footer>
     <footer>
     </footer>
     </body>  
