--- a/itis3135/client_project/index.html
+++ b/itis3135/client_project/index.html
@@ -20,7 +20,7 @@
   </head>
   <body>
     <header>
-        <h1>About Us</h1>
+        <h1>Porunai</h1>
         <hr>
         <nav>
             <a href="./index.html">Home</a>
