updated about and index html

--- a/itis3135/client_project/index.html
+++ b/itis3135/client_project/index.html
@@ -6,7 +6,7 @@
     <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
     <style>
         body{
-            background-color: #8FCB9B;
+            background-color: #ccd3ce;
         }
         h1{
             font-size:40px;
@@ -29,7 +29,7 @@
         <hr>
     </header>
     <main>
-        <img src="#" alt="#"/>
+        <img src="images/hero_image.png" alt="hero_image" style="width:80%; display: block; margin-left: auto; margin-right: auto;"/>
         <h2>welcome statement</h2>
         <p>small bio regarding company</p>
     </main>
