--- a/itis3135/client_project/about.html
+++ b/itis3135/client_project/about.html
@@ -6,7 +6,7 @@
     <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
     <style>
         body{
-            background-color: #8FCB9B;
+            background-color: #ccd3ce;
         }
         h1{
             font-size:40px;
