created portfolio, services, contact, and stylesheet

--- a/itis3135/client_project/contact.html
+++ b/itis3135/client_project/contact.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Porunai | Home</title>
+    <title>Porunai | About</title>
     <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="stylesheet/stylesheet.css">
   </head>
@@ -20,15 +20,17 @@
         <hr>
     </header>
     <main>
-        <img src="images/hero_image.png" alt="hero_image" style="width:80%; display: block; margin-left: auto; margin-right: auto;"/>
-        <h2>welcome statement</h2>
-        <p>small bio regarding company</p>
+        <h2>Contact Us</h2>
+        <p><strong>Phone Number: </strong>phone num</p>
+        <p><strong>Email: </strong>email_address</p>
     </main>
     <br>
     <br>
     <br>
     <footer>
         <p>phone num & copywright</p>
+    </footer>
+    <footer>
     </footer>
     </body>  
   </html>
