--- a/itis3135/client_project/about.html
+++ b/itis3135/client_project/about.html
@@ -4,19 +4,7 @@
     <meta charset="UTF-8" />
     <title>Porunai | About</title>
     <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
-    <style>
-        body{
-            background-color: #ccd3ce;
-        }
-        h1{
-            font-size:40px;
-            text-align: center;
-        }
-        hr{
-            height:10px;
-            background-color: black;
-        }
-    </style>
+    <link rel="stylesheet" href="stylesheet/stylesheet.css">
   </head>
   <body>
     <header>
@@ -25,6 +13,9 @@
         <nav>
             <a href="./index.html">Home</a>
             <a href="./about.html">About</a>
+            <a href="./portfolio.html">Portfolio</a>
+            <a href="./services.html">Services</a>
+            <a href="./contact.html">Contact</a>
         </nav>
         <hr>
     </header>
