added copyright symbol to all pages

--- a/itis3135/client_project/portfolio.html
+++ b/itis3135/client_project/portfolio.html
@@ -27,7 +27,7 @@
     <br>
     <br>
     <footer>
-        <p>phone num & copywright</p>
+        <p>phone num &copy; 2025</p>
     </footer>
     <footer>
     </footer>
