--- a/itis3135/client_project/contact.html
+++ b/itis3135/client_project/contact.html
@@ -8,7 +8,12 @@
   </head>
   <body>
     <header>
-        <h1>Porunai</h1>
+        <div class="container">
+            <img src="images/hero_image.png" alt="logo"/>
+            <div class="headerText">
+                <h1>Porunai</h1>
+            </div>
+        </div>
         <hr>
         <nav>
             <a href="./index.html">Home</a>
