moved welcome statement

--- a/itis3135/client_project/index.html
+++ b/itis3135/client_project/index.html
@@ -25,9 +25,9 @@
         <hr>
     </header>
     <main>
-        <img src="images/hero_image.png" alt="hero_image" style="width:80%; display: block; margin-left: auto; margin-right: auto;"/>
-        <h2>welcome statement</h2>
-        <p>small bio regarding company</p>
+        <img class="hero-img" src="images/hero_image.png" alt="hero_image"/>
+        <h2 class="welcome">welcome statement</h2>
+        <p class="home-bio">small bio regarding company</p>
     </main>
     <br>
     <br>
