updated welcome statement

--- a/itis3135/client_project/index.html
+++ b/itis3135/client_project/index.html
@@ -26,8 +26,11 @@
     </header>
     <main>
         <img class="hero-img" src="images/hero_image.png" alt="hero_image"/>
-        <h2 class="welcome">welcome statement</h2>
-        <p class="home-bio">small bio regarding company</p>
+        <div class="welcome">
+            <h2>welcome statement</h2>
+            <p>small bio regarding company</p>
+        </div>
+        
     </main>
     <br>
     <br>
