--- a/itis3135/client_project/index.html
+++ b/itis3135/client_project/index.html
@@ -9,7 +9,7 @@
   <body>
     <header>
         <div class="container">
-            <img src="images/hero_image.png" alt="logo"/>
+            <img src="images/logo_placeholder.png" alt="logo"/>
             <div class="headerText">
                 <h1>Porunai</h1>
             </div>
