photo grid for portfolio with css

--- a/itis3135/client_project/portfolio.html
+++ b/itis3135/client_project/portfolio.html
@@ -27,6 +27,17 @@
     <main>
         <h2>Portfolio</h2>
         <p>images for portfolio go here</p>
+        <section>
+            <h2 style="display:none">text</h2>
+            <div class="portfolio">
+                <div class="photo"><img src="images/hero_image.png" alt="#"></div>
+                <div class="photo"><img src="images/hero_image.png" alt="#"></div>
+                <div class="photo"><img src="images/hero_image.png" alt="#"></div>
+                <div class="photo"><img src="images/hero_image.png" alt="#"></div>
+                <div class="photo"><img src="images/hero_image.png" alt="#"></div>
+                <div class="photo"><img src="images/hero_image.png" alt="#"></div>
+            </div>
+        </section>
     </main>
     <br>
     <br>
