--- a/itis3135/client_project/portfolio.html
+++ b/itis3135/client_project/portfolio.html
@@ -26,7 +26,6 @@
     </header>
     <main>
         <h2>Portfolio</h2>
-        <p>images for portfolio go here</p>
         <section>
             <h2 style="display:none">text</h2>
             <div class="portfolio">
@@ -37,6 +36,9 @@
                 <div class="photo"><img src="images/hero_image.png" alt="#"></div>
                 <div class="photo"><img src="images/hero_image.png" alt="#"></div>
             </div>
+            <div class="lightbox" id="lightbox">
+                <img src="#" alt="#">
+            </div>
         </section>
     </main>
     <br>
@@ -45,7 +47,6 @@
     <footer>
         <p>phone num &copy; 2025</p>
     </footer>
-    <footer>
-    </footer>
+    <script src="scripts/lightbox.js"></script>
     </body>  
   </html>
