--- a/itis3135/client_project/services.html
+++ b/itis3135/client_project/services.html
@@ -25,10 +25,30 @@
         <hr>
     </header>
     <main>
-        <h2>Services</h2>
-        <h3>types of services</h3>
+        <h2>Our Services</h2>
+        <h3>Housewarmings</h3>
         <p>details</p>
-        <p>pricing</p>
+        <ul>
+            <li><p>text</p></li>
+            <li><p>text</p></li>
+        </ul>
+        <p>Pricing: $##</p>
+        <br>
+        <h3>Arangetrams</h3>
+        <p>details</p>
+        <ul>
+            <li><p>text</p></li>
+            <li><p>text</p></li>
+        </ul>
+        <p>Pricing: $##</p>
+        <br>
+        <h3>Other Events</h3>
+        <p>details</p>
+        <ul>
+            <li><p>text</p></li>
+            <li><p>text</p></li>
+        </ul>
+        <p>Pricing: $##</p>
     </main>
     <br>
     <br>
