added comments to all pages

--- a/itis3135/client_project/contact.html
+++ b/itis3135/client_project/contact.html
@@ -5,6 +5,7 @@
     <title>Porunai | About</title>
     <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="stylesheet/stylesheet.css">
+    <!-- Contact page for Porunai Photography site -->
   </head>
   <body>
     <header>
@@ -24,7 +25,7 @@
         </nav>
         <hr>
     </header>
-    <main>
+    <main><!--text displaying business contact information-->
         <h2>Contact Us</h2>
         <p><strong>Phone Number: </strong>phone num</p>
         <p><strong>Email: </strong>email_address</p>
