--- a/itis3135/client_project/index.html
+++ b/itis3135/client_project/index.html
@@ -5,10 +5,11 @@
     <title>Porunai | Home</title>
     <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="stylesheet/stylesheet.css">
+    <!-- Home page for Porunai Photography site -->
   </head>
   <body>
     <header>
-        <div class="container">
+         <div class="container">    <!--div for position and size of logo-->
             <img src="images/logo_placeholder.png" alt="logo"/>
             <div class="headerText">
                 <h1>Porunai</h1>
@@ -25,7 +26,7 @@
         <hr>
     </header>
     <main>
-        <img class="hero-img" src="images/hero_image.png" alt="hero_image"/>
+        <img class="hero-img" src="images/hero_image.png" alt="hero_image"/><!--element for hero image-->
         <div class="welcome">
             <h2>welcome statement</h2>
             <p>small bio regarding company</p>
