--- a/itis3135/client_project/portfolio.html
+++ b/itis3135/client_project/portfolio.html
@@ -5,6 +5,7 @@
     <title>Porunai | About</title>
     <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="stylesheet/stylesheet.css">
+    <!-- Portfolio page for Porunai Photography site -->
   </head>
   <body>
     <header>
@@ -26,7 +27,7 @@
     </header>
     <main>
         <h2>Portfolio</h2>
-        <section>
+        <section><!--elements for displaying the images in a grid formation-->
             <h2 style="display:none">text</h2>
             <div class="portfolio">
                 <div class="photo"><img src="images/hero_image.png" alt="#"></div>
