--- a/itis3135/client_project/services.html
+++ b/itis3135/client_project/services.html
@@ -5,6 +5,7 @@
     <title>Porunai | About</title>
     <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="stylesheet/stylesheet.css">
+    <!-- Services page for Porunai Photography site -->
   </head>
   <body>
     <header>
@@ -24,7 +25,7 @@
         </nav>
         <hr>
     </header>
-    <main>
+    <main><!--text for services provided, along with details and pricing-->
         <h2>Our Services</h2>
         <h3>Housewarmings</h3>
         <p>details</p>
