--- a/itis3135/client_project/about.html
+++ b/itis3135/client_project/about.html
@@ -5,6 +5,7 @@
     <title>Porunai | About</title>
     <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="stylesheet/stylesheet.css">
+    <!-- Abuot page for Porunai Photography site -->
   </head>
   <body>
     <header>
