added box around anchor in nav for identifying which page you are on

--- a/itis3135/client_project/about.html
+++ b/itis3135/client_project/about.html
@@ -5,7 +5,7 @@
     <title>Porunai | About</title>
     <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="stylesheet/stylesheet.css">
-    <!-- Abuot page for Porunai Photography site -->
+    <!-- About page for Porunai Photography site -->
   </head>
   <body>
     <header>
@@ -18,7 +18,7 @@
         <hr>
         <nav>
             <a href="./index.html">Home</a>
-            <a href="./about.html">About</a>
+            <a href="./about.html" class="active">About</a>
             <a href="./portfolio.html">Portfolio</a>
             <a href="./services.html">Services</a>
             <a href="./contact.html">Contact</a>
