--- a/itis3135/client_project/contact.html
+++ b/itis3135/client_project/contact.html
@@ -21,7 +21,7 @@
             <a href="./about.html">About</a>
             <a href="./portfolio.html">Portfolio</a>
             <a href="./services.html">Services</a>
-            <a href="./contact.html">Contact</a>
+            <a href="./contact.html" class="active">Contact</a>
         </nav>
         <hr>
     </header>
