--- a/itis3135/client_project/index.html
+++ b/itis3135/client_project/index.html
@@ -17,7 +17,7 @@
         </div>
         <hr>
         <nav>
-            <a href="./index.html">Home</a>
+            <a href="./index.html" class="active">Home</a>
             <a href="./about.html">About</a>
             <a href="./portfolio.html">Portfolio</a>
             <a href="./services.html">Services</a>
