--- a/itis3135/client_project/portfolio.html
+++ b/itis3135/client_project/portfolio.html
@@ -19,7 +19,7 @@
         <nav>
             <a href="./index.html">Home</a>
             <a href="./about.html">About</a>
-            <a href="./portfolio.html">Portfolio</a>
+            <a href="./portfolio.html" class="active">Portfolio</a>
             <a href="./services.html">Services</a>
             <a href="./contact.html">Contact</a>
         </nav>
