--- a/itis3135/client_project/services.html
+++ b/itis3135/client_project/services.html
@@ -20,7 +20,7 @@
             <a href="./index.html">Home</a>
             <a href="./about.html">About</a>
             <a href="./portfolio.html">Portfolio</a>
-            <a href="./services.html">Services</a>
+            <a href="./services.html" class="active">Services</a>
             <a href="./contact.html">Contact</a>
         </nav>
         <hr>
