changed h1 to Porunai Photography

--- a/itis3135/client_project/index.html
+++ b/itis3135/client_project/index.html
@@ -12,7 +12,7 @@
          <div class="container">    <!--div for position and size of logo-->
             <img src="images/logo_placeholder.png" alt="logo"/>
             <div class="headerText">
-                <h1>Porunai</h1>
+                <h1>Porunai Photography</h1>
             </div>
         </div>
         <hr>
