--- a/itis3135/client_project/services.html
+++ b/itis3135/client_project/services.html
@@ -12,7 +12,7 @@
         <div class="container">
             <img src="images/logo_placeholder.png" alt="logo"/>
             <div class="headerText">
-                <h1>Porunai</h1>
+                <h1>Porunai Photography</h1>
             </div>
         </div>
         <hr>
