--- a/itis3135/review1.html
+++ b/itis3135/review1.html
@@ -46,14 +46,14 @@
       <ul>
         <li>1. The submission leads to the page.</li>
         <li>2. There are no spaces or upper-cases in the file/folder names, including scripts, images, etc.</li>
-        <li>3. </li>
-        <li class="indent">a. </li>
-        <li class="indent">b. </li>
-        <li class="indent">c. </li>
-        <li class="double-indent">i. </li>
-        <li class="double-indent">ii. </li>
-        <li class="double-indent">iii. </li>
-        <li class="double-indent">iv. </li>
+        <li>3. Design:</li>
+        <li class="indent">a. The page has sufficient contrast/font sizing, making it easy to read.</li>
+        <li class="indent">b. The page has site colors and fonts using the standard .css file.</li>
+        <li class="indent">c. CRAP Principles</li>
+        <li class="double-indent">i. Contrast ☑️</li>
+        <li class="double-indent">ii. Repetition ☑️</li>
+        <li class="double-indent">iii. Alignment ☑️</li>
+        <li class="double-indent">iv. Proximity ☑️</li>
         <li>4. The page has within it:</li>
         <li class="indent">a. Header</li>
         <li class="indent">b. Main</li>
@@ -67,7 +67,6 @@
         <li>8. Page has footer with:</li>
         <li class="indent">a. HTML validation</li>
         <li class="indent">b. CSS validation</li>
-        <li>9. </li>
       </ul>
     </main>
     <footer>
