--- a/itis3135/review1.html
+++ b/itis3135/review1.html
@@ -15,10 +15,7 @@
         a:hover{
     color:rgb(191, 26, 26);
         }
-        h1{
-            font-family:Tahoma;
-        }
-        h2{
+        h1,h2,h3{
             font-family:Tahoma;
         }
         p{
@@ -30,6 +27,11 @@
         .double-indent{
             margin-left:60px;
         }
+        ul,h4{
+            font-family:Tahoma;
+            margin-left:140px;
+        }
+
     </style>
   </head>
   <body>
@@ -43,6 +45,7 @@
         <img src="images/nathaniel_ward_client_project_screenshot.png" alt="Screenshot of Nathaniel Ward's Client Project Site">
         <figcaption><a href="https://webpages.charlotte.edu/nward16/itis3135/client/">Screenshot of "HackTheBox Tutorials" Site</a></figcaption>
       </figure>
+      <h4>Checklist:</h4>
       <ul>
         <li>1. The submission leads to the page.</li>
         <li>2. There are no spaces or upper-cases in the file/folder names, including scripts, images, etc.</li>
