created review2.html and updated review1.html

--- a/itis3135/review2.html
+++ b/itis3135/review2.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Muhilan Muruganandam|Magnificent Meercat|ITIS3135|Peer Evaluation 1</title>
+    <title>Muhilan Muruganandam|Magnificent Meercat|ITIS3135|Peer Evaluation 2</title>
     <link rel="stylesheet" href="styles/default.css">
     <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
     <style>
@@ -39,11 +39,11 @@
       <!--<div data-include="components/header.html"></div>-->
     </header>
     <main>
-      <h2 class="mobile-heading">Client Project - Peer Evaluation 1</h2>
-      <h3 style="text-align: center;">Ward, Nathaniel</h3>
+      <h2 class="mobile-heading">Client Project - Peer Evaluation 2</h2>
+      <h3 style="text-align: center;">Stocks, Kacey</h3>
       <figure>
-        <img src="images/nathaniel_ward_client_project_screenshot.png" alt="Screenshot of Nathaniel Ward's Client Project Site">
-        <figcaption><a href="https://webpages.charlotte.edu/nward16/itis3135/client/">Screenshot of "HackTheBox Tutorials" Site</a></figcaption>
+        <img src="images/kacey_stocks_client_project_screenshot.png" alt="Screenshot of Kacey Stocks's Client Project Site">
+        <figcaption><a href="#">Screenshot of "Web Basics Interactive" Site</a></figcaption>
       </figure>
       <h4>Checklist:</h4>
       <ul>
@@ -63,13 +63,13 @@
         <li class="indent">c. Footer ☑️</li>
         <li>5. Header contains H1 with text in site/brand header. ☑️</li>
         <li class="indent">a. The text is the brand/company since this is a brand/company site. ☑️</li>
-        <li class="indent">b. The page name is not in the header ☑️.</li>
+        <li class="indent">b. The page name is not in the header. ☑️</li>
         <li class="indent">c. They seem to understand the difference between head, header, and heading. ☑️</li>
         <li>6. Main starts with name of page with an H2 element and does not include the name of the site/brand. ☑️</li>
-        <li>7. Page contains brand tagline. ☑️</li>
+        <li>7. Page contains brand tagline. ✖️</li>
         <li>8. Page has footer with:</li>
-        <li class="indent">a. HTML validation ☑️</li>
-        <li class="indent">b. CSS validation ☑️</li>
+        <li class="indent">a. HTML validation ✖️</li>
+        <li class="indent">b. CSS validation ✖️</li>
       </ul>
     </main>
     <footer>
