--- a/itis3135/review2.html
+++ b/itis3135/review2.html
@@ -43,7 +43,7 @@
       <h3 style="text-align: center;">Stocks, Kacey</h3>
       <figure>
         <img src="images/kacey_stocks_client_project_screenshot.png" alt="Screenshot of Kacey Stocks's Client Project Site">
-        <figcaption><a href="#">Screenshot of "Web Basics Interactive" Site</a></figcaption>
+        <figcaption><a href="https://webpages.charlotte.edu/kstocks3/itis3135/project/interactive.html">Screenshot of "Web Basics Interactive" Site</a></figcaption>
       </figure>
       <h4>Checklist:</h4>
       <ul>
