added target=_blank to links

--- a/itis3135/review1.html
+++ b/itis3135/review1.html
@@ -43,7 +43,7 @@
       <h3 style="text-align: center;">Ward, Nathaniel</h3>
       <figure>
         <img src="images/nathaniel_ward_client_project_screenshot.png" alt="Screenshot of Nathaniel Ward's Client Project Site">
-        <figcaption><a href="https://webpages.charlotte.edu/nward16/itis3135/client/">Screenshot of "HackTheBox Tutorials" Site</a></figcaption>
+        <figcaption><a href="https://webpages.charlotte.edu/nward16/itis3135/client/" target="_blank">Screenshot of "HackTheBox Tutorials" Site</a></figcaption>
       </figure>
       <h4>Checklist:</h4>
       <ul>
