--- a/itis3135/client_project/contact.html
+++ b/itis3135/client_project/contact.html
@@ -29,6 +29,18 @@
         <h2>Contact Us</h2>
         <p><strong>Phone Number: </strong>phone num</p>
         <p><strong>Email: </strong>email_address</p>
+        <br>
+        <hr style="width: 185px;height:7px; margin-left:0px">
+        <!-- form goes here -->
+         <form>
+            <label>First Name: <input id="firstName" type="text" placeholder="first name" required></label>
+            <label>Last Name: <input id="lastName" type="text" placeholder="last name" required></label>
+            <label>Phone Number<input id="phoneNum" type="text" placeholder="Enter phone number" required></label>
+            <label>Event Date: <input id="eventDate" type="text" placeholder="Enter event date" required></label>
+            <label>Event Time: <input id="eventTime" type="text" placeholder="Enter event time" required></label>
+            <label>Event Location: <input id="eventLocation" type="text" placeholder="Enter event location" required></label>
+
+         </form>
     </main>
     <br>
     <br>
