--- a/itis3135/client_project/contact.html
+++ b/itis3135/client_project/contact.html
@@ -39,7 +39,8 @@
             <label>Event Date: <input id="eventDate" type="text" placeholder="Enter event date" required></label>
             <label>Event Time: <input id="eventTime" type="text" placeholder="Enter event time" required></label>
             <label>Event Location: <input id="eventLocation" type="text" placeholder="Enter event location" required></label>
-
+            
+            <button type="submit">Send</button>
          </form>
     </main>
     <br>
