added scripts to html file, created contract_form js file

--- a/itis3135/client_project/contact.html
+++ b/itis3135/client_project/contact.html
@@ -39,7 +39,7 @@
             <label>Event Date: <input id="eventDate" type="text" placeholder="Enter event date" required></label>
             <label>Event Time: <input id="eventTime" type="text" placeholder="Enter event time" required></label>
             <label>Event Location: <input id="eventLocation" type="text" placeholder="Enter event location" required></label>
-            
+
             <button type="submit">Send</button>
          </form>
     </main>
@@ -51,5 +51,8 @@
     </footer>
     <footer>
     </footer>
+    <script src="scripts/HTMLInclude.min.js"></script>
+    <script src="scripts/contact_form.js"></script>
+    <script src="scripts/lightbox.js"></script>
     </body>  
   </html>
