implemented multi-pages-in-one feature for services page

--- a/itis3135/client_project/services.html
+++ b/itis3135/client_project/services.html
@@ -27,29 +27,44 @@
     </header>
     <main><!--text for services provided, along with details and pricing-->
         <h2>Our Services</h2>
-        <h3>Housewarmings</h3>
-        <p>details</p>
-        <ul>
-            <li><p>text</p></li>
-            <li><p>text</p></li>
-        </ul>
-        <p>Pricing: $##</p>
-        <br>
-        <h3>Arangetrams</h3>
-        <p>details</p>
-        <ul>
-            <li><p>text</p></li>
-            <li><p>text</p></li>
-        </ul>
-        <p>Pricing: $##</p>
-        <br>
-        <h3>Other Events</h3>
-        <p>details</p>
-        <ul>
-            <li><p>text</p></li>
-            <li><p>text</p></li>
-        </ul>
-        <p>Pricing: $##</p>
+
+        <div class="service-tabs">
+            <a href="#housewarmings" class="nav-link" aria-selected="true">Housewarmings</a>
+            <a href="#arangetrams" class="nav-link" aria-selected="false">Arangetrams</a>
+            <a href="#other-events" class="nav-link" aria-selected="false">Other Events</a>
+        </div>
+
+        <div>
+            <section id="housewarmings" class="data-section">
+                <h3>Housewarmings</h3>
+                <p>details</p>
+                <ul>
+                    <li><p>text</p></li>
+                    <li><p>text</p></li>
+                </ul>
+                <p>Pricing: $##</p>
+            </section>
+
+            <section id="arangetrams" class="data-section">
+                <h3>Arangetrams</h3>
+                <p>details</p>
+                <ul>
+                    <li><p>text</p></li>
+                    <li><p>text</p></li>
+                </ul>
+                <p>Pricing: $##</p>
+            </section>
+
+            <section id="other-events" class="data-section">
+                <h3>Other Events</h3>
+                <p>details</p>
+                <ul>
+                    <li><p>text</p></li>
+                    <li><p>text</p></li>
+                </ul>
+                <p>Pricing: $##</p>
+            </section>
+        </div>
     </main>
     <br>
     <br>
@@ -57,7 +72,6 @@
     <footer>
         <p>phone num &copy; 2025</p>
     </footer>
-    <footer>
-    </footer>
+    <script src="scripts/services_options.js"></script>
     </body>  
   </html>
