added role=tab and role=tablist to service-tabs div

--- a/itis3135/client_project/services.html
+++ b/itis3135/client_project/services.html
@@ -28,10 +28,10 @@
     <main><!--text for services provided, along with details and pricing-->
         <h2>Our Services</h2>
 
-        <div class="service-tabs">
-            <a href="#housewarmings" class="nav-link" aria-selected="true">Housewarmings</a>
-            <a href="#arangetrams" class="nav-link" aria-selected="false">Arangetrams</a>
-            <a href="#other-events" class="nav-link" aria-selected="false">Other Events</a>
+        <div class="service-tabs" role="tablist">
+            <a href="#housewarmings" class="nav-link" role="tab" aria-selected="true">Housewarmings</a>
+            <a href="#arangetrams" class="nav-link" role="tab" aria-selected="false">Arangetrams</a>
+            <a href="#other-events" class="nav-link" role="tab" aria-selected="false">Other Events</a>
         </div>
 
         <div>
