--- a/itis3135/client_project/contact.html
+++ b/itis3135/client_project/contact.html
@@ -36,12 +36,25 @@
             <label>First Name: <input id="firstName" type="text" placeholder="first name" required></label>
             <label>Last Name: <input id="lastName" type="text" placeholder="last name" required></label>
             <label>Phone Number<input id="phoneNum" type="text" placeholder="Enter phone number" required></label>
+            <!--
             <label>Event Date: <input id="eventDate" type="text" placeholder="Enter event date" required></label>
             <label>Event Time: <input id="eventTime" type="text" placeholder="Enter event time" required></label>
+            -->
+            <label>Event Date: <input id="eventDate" type="date" required></label>
+            <label>Event Time: <input id="eventTime" type="time" required></label>
             <label>Event Location: <input id="eventLocation" type="text" placeholder="Enter event location" required></label>
 
             <button type="submit">Send</button>
          </form>
+
+         <div id="confirmationPopup" class="popup">
+            <div class="popup-content">
+                <h3>Please Confirm Your Information</h3>
+                <p id="confirmText"></p>
+                <button id="confirmBtn">Confirm</button>
+                <button id="editBtn">Edit</button>
+            </div>
+         </div>
     </main>
     <br>
     <br>
