added footer with design company name

--- a/itis3135/client_project/services.html
+++ b/itis3135/client_project/services.html
@@ -70,7 +70,7 @@
     <br>
     <br>
     <footer>
-        <p>phone num &copy; 2025</p>
+        <p>Page Built by <a href="https://webpages.charlotte.edu/mmuruga2/itis3135/muruganandamsoftware.com/">Muruganandam Software</a> &copy; 2025</p>
     </footer>
     <script src="scripts/services_options.js"></script>
     </body>  
