--- a/itis3135/client_project/index.html
+++ b/itis3135/client_project/index.html
@@ -31,13 +31,12 @@
             <h2>welcome statement</h2>
             <p>small bio regarding company</p>
         </div>
-        
     </main>
     <br>
     <br>
     <br>
     <footer>
-        <p>phone num &copy; 2025</p>
+        <p>Page Built by <a href="https://webpages.charlotte.edu/mmuruga2/itis3135/muruganandamsoftware.com/">Muruganandam Software</a> &copy; 2025</p>
     </footer>
     </body>  
   </html>
