added contrast to confirmation popup as well as added target=_blank to footers

--- a/itis3135/client_project/contact.html
+++ b/itis3135/client_project/contact.html
@@ -60,7 +60,7 @@
     <br>
     <br>
     <footer>
-        <p>Page Built by <a href="https://webpages.charlotte.edu/mmuruga2/itis3135/muruganandamsoftware.com/">Muruganandam Software</a> &copy; 2025</p>
+        <p>Page Built by <a href="https://webpages.charlotte.edu/mmuruga2/itis3135/muruganandamsoftware.com/" target="_blank">Muruganandam Software</a> &copy; 2025</p>
     </footer>
     <script src="scripts/HTMLInclude.min.js"></script>
     <script src="scripts/contact_form.js"></script>
