--- a/itis3135/client_project/about.html
+++ b/itis3135/client_project/about.html
@@ -34,7 +34,7 @@
     <br>
     <br>
     <footer>
-        <p>Page Built by <a href="https://webpages.charlotte.edu/mmuruga2/itis3135/muruganandamsoftware.com/">Muruganandam Software</a> &copy; 2025</p>
+        <p>Page Built by <a href="https://webpages.charlotte.edu/mmuruga2/itis3135/muruganandamsoftware.com/" target="_blank">Muruganandam Software</a> &copy; 2025</p>
     </footer>
     </body>  
   </html>
