--- a/itis3135/client_project/portfolio.html
+++ b/itis3135/client_project/portfolio.html
@@ -46,7 +46,7 @@
     <br>
     <br>
     <footer>
-        <p>Page Built by <a href="https://webpages.charlotte.edu/mmuruga2/itis3135/muruganandamsoftware.com/">Muruganandam Software</a> &copy; 2025</p>
+        <p>Page Built by <a href="https://webpages.charlotte.edu/mmuruga2/itis3135/muruganandamsoftware.com/" target="_blank">Muruganandam Software</a> &copy; 2025</p>
     </footer>
     <script src="scripts/lightbox.js"></script>
     </body>  
