--- a/itis3135/client_project/services.html
+++ b/itis3135/client_project/services.html
@@ -65,6 +65,7 @@
                 <p>Pricing: $##</p>
             </section>
         </div>
+        <p><strong><a href="./contact.html" style="color:rgb(78, 78, 233); ">Contact</a></strong> us for pricing.</p>
     </main>
     <br>
     <br>
