--- a/itis3135/client_project/portfolio.html
+++ b/itis3135/client_project/portfolio.html
@@ -30,12 +30,12 @@
         <section><!--elements for displaying the images in a grid formation-->
             <h2 style="display:none">text</h2>
             <div class="portfolio">
-                <div class="photo"><img src="images/hero_image.png" alt="#"></div>
-                <div class="photo"><img src="images/hero_image.png" alt="#"></div>
-                <div class="photo"><img src="images/hero_image.png" alt="#"></div>
-                <div class="photo"><img src="images/hero_image.png" alt="#"></div>
-                <div class="photo"><img src="images/hero_image.png" alt="#"></div>
-                <div class="photo"><img src="images/hero_image.png" alt="#"></div>
+                <div class="photo"><img src="images/Arangetram3.jpg" alt="#"></div>
+                <div class="photo"><img src="images/Housewarming-Photo3-Porunai2025.JPG" alt="#"></div>
+                <div class="photo"><img src="images/Arangetram1.jpg" alt="#"></div>
+                <div class="photo"><img src="images/Housewarming-Photo1-Porunai2025.JPG" alt="#"></div>
+                <div class="photo"><img src="images/Arangetram2.jpg" alt="#"></div>
+                <div class="photo"><img src="images/Housewarming-Photo2-Porunai2025.JPG" alt="#"></div>
             </div>
             <div class="lightbox" id="lightbox">
                 <img src="#" alt="#">
