added welcome and about statement, as well as more options for services

--- a/itis3135/client_project/about.html
+++ b/itis3135/client_project/about.html
@@ -27,8 +27,8 @@
     </header>
     <main>
         <h2>About Us</h2>
-        <h3>about statement</h3>
-        <p>main bio regarding company</p>
+        <p>Porunai Photography is a family-owned company that specializes in caputring your special moments and turning them into memories that everyone can enjoy.</p>
+        <p>What started as a simple passion, over the years, has now grown into a way for people to enjoy and treasure their important moments in unique and beautiful ways.</p>
     </main>
     <br>
     <br>
