--- a/itis3135/client_project/index.html
+++ b/itis3135/client_project/index.html
@@ -28,8 +28,8 @@
     <main>
         <img class="hero-img" src="images/hero_image.png" alt="hero_image"/><!--element for hero image-->
         <div class="welcome">
-            <h2>welcome statement</h2>
-            <p>small bio regarding company</p>
+            <h2>Welcome to the site for Porunai Photography!</h2>
+            <p>We are a company that focuses on helping you keep important moments and memories in beautiful and aestetic ways.</p>
         </div>
     </main>
     <br>
