--- a/itis3135/client_project/services.html
+++ b/itis3135/client_project/services.html
@@ -37,7 +37,7 @@
         <div>
             <section id="housewarmings" class="data-section">
                 <h3>Housewarmings</h3>
-                <p>details</p>
+                <p><strong>Details:</strong></p>
                 <ul>
                     <li><p>text</p></li>
                     <li><p>text</p></li>
@@ -45,19 +45,26 @@
             </section>
             <section id="arangetrams" class="data-section">
                 <h3>Arangetrams</h3>
-                <p>details</p>
+                <p><strong>Details:</strong></p>
+                <p>Services include:</p>
                 <ul>
-                    <li><p>text</p></li>
-                    <li><p>text</p></li>
+                    <li><p>Arangetram photoshoots</p></li>
+                    <li><p>Video and photography coverage of the Arangetram event</p></li>
+                    <li><p>Before and after event coverage on the day of the Arangetram</p></li>
                 </ul>
             </section>
             <section id="other-events" class="data-section">
                 <h3>Other Events</h3>
-                <p>details</p>
+                <p><strong>Video and photography coverage</strong></p>
                 <ul>
-                    <li><p>text</p></li>
-                    <li><p>text</p></li>
+                    <li><p>Birthday Parties</p></li>
+                    <li><p>Coming of Age Ceremonies</p></li>
+                    <li><p>Graduations</p></li>
+                    <li><p>Other milestone events</p></li>
                 </ul>
+                <br>    
+                <p>Family Pictures</p>
+                
             </section>
         </div>
         <br>
